--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-intersection-observer": "^10.0.0",
     "sass": "^1.93.3",
     "swiper": "^12.0.3"
   },
