--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
+    "mongo": "^0.1.0",
+    "mongoose": "^8.19.4",
     "next": "16.0.1",
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
