--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.23.24",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.553.0",
     "mongo": "^0.1.0",
     "mongoose": "^8.19.4",
