--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-flag-kit": "^1.1.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
     "sass": "^1.93.3",
     "swiper": "^12.0.3"
