--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-flag-kit": "^1.1.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
     "sass": "^1.93.3",
@@ -35,6 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webidl-conversions": "^8.0.0"
   }
 }
