--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "incremental": true,
+    "incremental": true,"typeRoots": ["./node_modules/@types"],
+    "types": [],
     "plugins": [
       {
         "name": "next"
